Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8194998/BrokenErrorMessageTest.out
BrokenErrorMessageTest.java:13:26: compiler.err.invalid.mref: kindname.method, (compiler.misc.cant.resolve.args: kindname.method, test, , )
1 error
